tests/e2e/fail/v4_fail_struct_default_repr.ep
# COMPILE_FAIL: str expected str, integer, bool, or u8[], got Outer

type Inner {
    x: i64
}

type Outer {
    inner: Inner
}

fun run(): i64 {
    println(str(new Outer {}))
    ret 0
}

fun main(): void {
    exit(run())
}
